# MultiMinerX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autogen.sh  branding-cust.cmake  make_curses_shell.sh  make_debug.sh
MultiMiner.xcodeproj/: project.pbxproj
MultiMiner.xcodeproj/xcuserdata/nwoolls.xcuserdatad/xcschemes/: MultiMiner.xcscheme  xcschememanagement.plist
scripts/: build.sh  install.sh  uninstall.sh
src/: CMakeLists.txt  api-rpc.c  api-rpc.h  miner-command.c  miner-command.h  miner-device.c  miner-device.h  miner-network.c  miner-network.h  miner-plugin.c  miner-plugin.h  utility-application.c  utility-application.h  utility-network.c  utility-network.h
